# tiptopplus

./: .gitignore  AGENTS.md  README.md  WORKSPACE-BOOTSTRAP.md  WORKSPACE-SERVICES.md
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md  WORKSPACE.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md
.planning/milestones/v1.0-phases/01-workspace-baseline/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-CONTEXT.md  01-DISCUSSION-LOG.md  01-RESEARCH.md  01-VALIDATION.md
.planning/milestones/v1.0-phases/02-config-and-bring-up-hardening/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-CONTEXT.md  02-DISCUSSION-LOG.md  02-RESEARCH.md  02-VALIDATION.md
.planning/milestones/v1.0-phases/03-perception-chain-stabilization/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-04-PLAN.md  03-04-SUMMARY.md  03-CONTEXT.md  03-DISCUSSION-LOG.md  03-RESEARCH.md  03-VALIDATION.md
.planning/milestones/v1.0-phases/04-planning-and-service-contract-hardening/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-03-PLAN.md  04-03-SUMMARY.md  04-04-PLAN.md  04-04-SUMMARY.md  04-CONTEXT.md  04-DISCUSSION-LOG.md  04-RESEARCH.md  04-VALIDATION.md
.planning/milestones/v1.0-phases/05-regression-and-verification-loop/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-02-SUMMARY.md  05-03-PLAN.md  05-03-SUMMARY.md  05-04-PLAN.md  05-04-SUMMARY.md  05-CONTEXT.md  05-DISCUSSION-LOG.md  05-RESEARCH.md  05-VALIDATION.md
.planning/phases/06-curated-root-repository-sync/: 06-01-PLAN.md  06-01-SUMMARY.md  06-02-PLAN.md  06-02-SUMMARY.md  06-CONTEXT.md  06-PATTERNS.md  06-RESEARCH.md  06-VALIDATION.md  06-VERIFICATION.md
scripts/: verify_curated_workspace_repo.sh
tiptop/: README.md  pixi.toml  pyproject.toml
tiptop/docs/: command-reference.md  contributing.md  development-build.md  getting-started.md  index.md  installation.md  simulation.md  troubleshooting.md  urinal-cleaning-v1.md
tiptop/tests/: conftest.py  test_d435_fast_fs_m2t2_demo.py  test_perception_baseline.py  test_planning_contracts.py  test_tiptop_h5.py  test_urinal_localization.py  test_urinal_validation.py  test_urinal_zones.py  test_workspace_config.py
tiptop/tiptop/: motion_planning.py  perception_wrapper.py  planning.py  recording.py  tiptop_run.py  tiptop_websocket_server.py  utils.py  websocket_server.py
tiptop/tiptop/config/: __init__.py  tiptop.yml  urinal_cleaning_v1.yml
tiptop/tiptop/perception/: sam.py  sam2.py  sam3.py  segmentation.py  utils.py  vlm.py
tiptop/tiptop/perception/cameras/: __init__.py
tiptop/tiptop/scripts/: compute_gripper_mask.py  d435_fast_fs_m2t2_demo.py  perception_demo.py  sam3_d435_demo.py  sam_server.py  tiptop_config.py  urinal_emit_dry_run_plan.py  urinal_localize_fixture.py  urinal_validate_dry_run.py
tiptop/tiptop/urinal/: __init__.py  localization.py  primitives.py  types.py  validation.py  zones.py
